# ios-cmake

./: README.md
samples/hello-ap/hello-ap/: CRAppDelegate.h  CRAppDelegate.m  CRViewController.h  CRViewController.m  hello-ap-Info.plist  main.m
samples/hello-ap/hello-ap.xcodeproj/: project.pbxproj
samples/hello-ap/hello-ap.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
samples/hello-ap/hello-ap/Base.lproj/: Main_iPad.storyboard
samples/hello-ap/hello-apTests/: hello_apTests.m
samples/hello-app/hello-app/: CRAppDelegate.h  CRAppDelegate.m  CRViewController.h  CRViewController.m  main.m
samples/hello-app/hello-app.xcodeproj/: project.pbxproj
samples/hello-app/hello-app.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
samples/hello-app/hello-app.xcodeproj/project.xcworkspace/xcshareddata/: hello-app.xccheckout
samples/hello-app/hello-app.xcodeproj/xcuserdata/bogdan.xcuserdatad/xcschemes/: hello-app.xcscheme  xcschememanagement.plist
samples/hello-app/hello-app/Base.lproj/: Main_iPhone.storyboard
samples/hello-app/hello-appTests/: hello_appTests.m
samples/hello-lib/: CMakeLists.txt  HelloIOS.h  HelloIOS.mm  HelloWorld.cpp  HelloWorld.h
toolchain/: iOS.cmake
